; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_mvumi.c_tag_is_empty.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_mvumi.c_tag_is_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvumi_tag = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mvumi_tag*)* @tag_is_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tag_is_empty(%struct.mvumi_tag* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mvumi_tag*, align 8
  store %struct.mvumi_tag* %0, %struct.mvumi_tag** %3, align 8
  %4 = load %struct.mvumi_tag*, %struct.mvumi_tag** %3, align 8
  %5 = getelementptr inbounds %struct.mvumi_tag, %struct.mvumi_tag* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
